Set default values for Game model and modify validation logic
This fixes an issue during loading of all values
